# PPTSlide2Video

./: .gitignore  README.md  claude_desktop_config_example.json  convert.bat  preview.bat  preview.py  pyproject.toml  requirements.txt  run_local.py  server.py  setup.bat  setup.sh
.claude/: settings.json
slidecast/: pipeline.py
slidecast/composer/: ffmpeg_composer.py  notes_to_srt.py  subtitle_handler.py
slidecast/generator/: animation_mapper.py  html_generator.py
slidecast/generator/templates/: slide.html.j2
slidecast/parser/: pptx_parser.py  slide_model.py
slidecast/renderer/: playwright_renderer.py
slidecast/utils/: color_utils.py  file_utils.py  unit_utils.py
tests/: create_sample.py  run_test.py
tests/fixtures/: sample.srt
